--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,10 @@ myvenv/
 venv/
 
 # Database
-db.sqlite3
+#db.sqlite3
 
 # Static folder at project root
-/static/
+#/static/
 
 # macOS
 ._*
@@ -29,4 +29,4 @@ $RECYCLE.BIN/
 # Visual Studio
 .vscode/
 .history/
-*.code-workspaceÎ
+*.code-workspaceï¿½
